--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "amzn-scraper",
+  "name": "scraper",
   "version": "1.0.0",
-  "description": "Amazon scraper with Puppeteer",
   "main": "scraper.js",
   "scripts": {
     "start": "node scraper.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer": "^21.3.8",
-    "body-parser": "^1.20.2"
+    "express": "^4.18.2"
   }
 }
